# anti_drone_agc_workspace

./: .gitignore  README.en.md  README.md  etc
.trae/specs/add-flown-path-viz/: checklist.md  spec.md  tasks.md
.trae/specs/create-ppt-rl-uav/: checklist.md  spec.md  tasks.md
.trae/specs/expand-progress-section/: checklist.md  spec.md  tasks.md
.trae/specs/experiment-logger-node/: checklist.md  spec.md  tasks.md
.trae/specs/fix-figure8-acceleration/: checklist.md  spec.md  tasks.md
.trae/specs/fix-obstacle-avoidance-crash/: checklist.md  spec.md  tasks.md
.trae/specs/fix-obstacle-strategy/: checklist.md  spec.md  tasks.md
.trae/specs/fix-perception-launch/: checklist.md  spec.md  tasks.md
.trae/specs/fix-position-error-filter/: checklist.md  spec.md  tasks.md
.trae/specs/unify-launch-scripts/: checklist.md  spec.md  tasks.md
.trae/specs/update-ppt-progress-page/: checklist.md  spec.md  tasks.md
docs/: faq_log_issues.md  learning_plan.md  project_guide.md  xtdrone_simulation_guide.md
docs/package规范/: drone_launch_controller.md
docs/指导书/: 基于强化学习的无人机自主避障与路径规划系统.md  项目调研报告.docx
experiment_data/: experiment_20260708_185400.csv  experiment_20260709_230118.csv
scripts/: add_avoidance_metrics.py  analyze_trajectory.py  generate_pptx.py  run_takeoff_demo.sh  spawn_obstacles.py  start_drone_test.sh  start_lqr_tracker_sim.sh  start_sim.sh  update_slide14_avoidance.py
src/A-LOAM/src/: kittiHelper.cpp  laserMapping.cpp  scanRegistration.cpp
src/air_ground_core/: CMakeLists.txt  package.xml
src/air_ground_core/src/: car_commander.cpp
src/drone_launch_controller/: CMakeLists.txt  README.md  package.xml
src/drone_launch_controller/config/: rosconsole.config
src/drone_launch_controller/include/drone_launch_controller/: arm_controller.h  drone_connector.h  drone_launch_controller.h  flight_status_publisher.h  health_checker.h  takeoff_controller.h
src/drone_launch_controller/launch/: drone_controller.launch
src/drone_launch_controller/msg/: DroneHealthStatus.msg  FlightStatus.msg
src/drone_launch_controller/scripts/: drone_control_example.py
src/drone_launch_controller/src/: arm_controller.cpp  drone_connector.cpp  drone_launch_controller_node.cpp  flight_status_publisher.cpp  health_checker.cpp  takeoff_controller.cpp
src/drone_launch_controller/srv/: ArmMotors.srv  ConnectionStatus.srv  DroneHealthCheck.srv  Takeoff.srv
src/lqr_trajectory_tracker/: CMakeLists.txt  README.md  package.xml
src/lqr_trajectory_tracker/config/: default_params.yaml  rosconsole.config
src/lqr_trajectory_tracker/include/lqr_trajectory_tracker/: lqr_controller.h  lqr_tracker_node.h  trajectory_generator.h
src/lqr_trajectory_tracker/launch/: lqr_tracker_sim.launch
src/lqr_trajectory_tracker/rviz/: lqr_tracker.rviz
src/lqr_trajectory_tracker/scripts/: test_lqr_controller.py  test_trajectory.py
src/lqr_trajectory_tracker/src/: lqr_controller.cpp  lqr_tracker_node.cpp  trajectory_generator.cpp
src/lqr_trajectory_tracker/worlds/: obstacles_only.world
src/rl_obstacle_avoidance/: CMakeLists.txt  package.xml
src/rl_obstacle_avoidance/launch/: experiment_logger.launch  perception.launch  rl_planner_node.launch
src/rl_obstacle_avoidance/msg/: ObstacleFeatures.msg
src/rl_obstacle_avoidance/scripts/: experiment_logger_node.py  perception_node.py  rl_planner_node.py
