<?xml version="1.0"?>
<package format="2">
  <name>drone_launch_controller</name>
  <version>0.1.0</version>
  <description>无人机启动控制器软件包，实现无人机连接初始化、系统自检、动力启动和起飞控制</description>

  <maintainer email="anti_drone_team@example.com">anti_drone_team</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
