<?xml version="1.0"?>
<package format="2">
  <name>lqr_trajectory_tracker</name>
  <version>0.1.0</version>
  <description>LQR轨迹跟踪算法包，用于测试无人机三维空间轨迹跟踪能力</description>

  <maintainer email="anti_drone_team@example.com">anti_drone_team</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <export>
  </export>
</package>
